tests/auto/sql/kernel/qsqlresult/qsqlresult.pro
@@ -1,7 +1,7 @@
 TARGET = tst_qsqlresult
 CONFIG += testcase
 
-QT = core sql testlib
+QT = core core-private sql sql-private testlib
 
 SOURCES += tst_qsqlresult.cpp
 HEADERS += testsqldriver.h
